--- a/src/main/resources/templates/bxtx.html
+++ b/src/main/resources/templates/bxtx.html
@@ -181,9 +181,9 @@
                         <div class="card-header">
                             <i class="fa fa-align-justify"></i> 办学点位置图
                         </div>
-                        <div class="card-block" style="min-width:400px;height:500px">
+                        <div class="card-block" style="min-width:400px;height:800px">
                             <iframe name="mainFrame" id="mainFrame" frameborder="0"
-                                    src="http://192.168.141.8/map.html?ID=2"
+                                    src="http://localhost:8000/mapPage/map.html?ID=2"
                                     style="width:100%;height: 100%;border:1px solid #096DA6" scrolling="auto"></iframe>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
 <script type="text/javascript" src="./echart3/map/js/province/yunnan.js"></script>
 <script type="text/javascript" src="./echart3/map/js/world.js"></script>
 <pre
- name="code" class="html"></pre>
+         name="code"  class="html"></pre>
 <script type="text/javascript">
 
     var geoCoordMap = {
