--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -137,7 +137,7 @@
                                 <i class="fa fa-align-justify"></i> 村干部学历提升办学点位置图
                             </div>
                             <div class="card-block" style="min-width:400px;height:500px">
-                                <iframe name="mainFrame" id="mainFrame" frameborder="0" src="http://192.168.141.8/map.html?ID=3" style="width:100%;height: 100%;border:1px solid #096DA6" scrolling="auto"></iframe>
+                                <iframe name="mainFrame" id="mainFrame" frameborder="0" src="http://localhost:8000/mapPage/map.html?ID=3" style="width:100%;height: 100%;border:1px solid #096DA6" scrolling="auto"></iframe>
                             </div>
                         </div>
                     </div>
